cleanup, readme, and google analytics

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,3 +1,6 @@
-<p>Python (<i>Proficient</i>) | C++ (<i>Comfortable</i>) | Javascript (<i>Comfortable</i>) | Rust (<i>Learning</i>)</p>
-<p>Flask | AWS Stack (SNS/SQS/Lambda, Step Functions) | Docker | Jenkins | PostgreSQL</p>
-<p>Task Orchestration | Microservices | Distributed Systems | Linux/Unix | Git</p>
+<h3>Languages</h3>
+<p>Python • C++ • Javascript • Rust (<i>Learning</i>)</p>
+<h3>Technologies</h3>
+<p>Flask • AWS Stack (SNS/SQS/Lambda, Step Functions) • Docker • Jenkins • PostgreSQL • MongoDB • Kubernetes</p>
+<h3>Additional</h3>
+<p>Task Orchestration • Microservices • Distributed Systems • Linux/Unix • Git Agile/Scrum • Architectural Design • Cloud Computing</p>
