--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,5 +1,5 @@
 <h3>Languages</h3>
-<p>Python • C++ • Javascript • Rust (<i>Learning</i>)</p>
+<p>Go • Python • C++ • Javascript</p>
 <h3>Technologies</h3>
 <p>Flask • AWS Stack (SNS/SQS/Lambda, Step Functions) • Docker • Jenkins • PostgreSQL • MongoDB • Kubernetes</p>
 <h3>Additional</h3>
